--- a/RcsApplication/bin/graphicDesign/application.css
+++ b/RcsApplication/bin/graphicDesign/application.css
@@ -13,3 +13,62 @@
     -fx-background-repeat: no-repeat;
     -fx-background-position: center;
 }
+#DatepickerArrow {
+    -fx-fill: gray;
+    -fx-stroke: gray;
+}
+#DatepickerArrow:hover {
+    -fx-fill: black;
+    -fx-stroke: black;
+}
+#DatePicker {
+    -fx-background-color: linear-gradient(to bottom, white, wheat);
+    -fx-border-color: black;
+}
+#DatepickerDayCell {
+    -fx-background-color: transparent;
+    -fx-border-radius: 4;
+    -fx-spacing: 0;
+}
+#DatepickerDayCell:hover {
+    -fx-background-color: azure;
+    -fx-border-color: royalblue;
+    -fx-border-radius: 3;
+    -fx-text-fill: royalblue;
+}
+#DatepickerDayCell .datepicker-today-cell {
+    -fx-background-color: lightsteelblue;
+    -fx-border-radius: 3;
+    -fx-border-style: segments(2,2);
+    -fx-border-color: royalblue;
+    -fx-text-fill: royalblue;
+    -fx-font-size: 12px;
+}
+.datepicker-weekday-row {
+    -fx-background-color: linear-gradient(to bottom, gray, lightgray, lightgray, lightgray, gray);
+    -fx-text-fill: black;
+    -fx-font-size: 12px;
+}
+.datepicker-monthyear-row {
+    -fx-background-color: linear-gradient(to bottom, beige, lightsalmon, beige); 
+    -fx-text-fill: black;
+    -fx-font-size: 12px;
+}
+.datepicker-othermonth-cell {
+    -fx-border-radius: 4;
+    -fx-text-fill: gray;
+    -fx-font-size: 12px;
+}
+#DatepickerTodayButton {
+    -fx-font-size: 12px;
+}
+#DatepickerTodayButtonBox {
+    -fx-padding: 5;
+}
+#CalenderButton {
+    -fx-font-size: 14px;
+    -fx-background-image: url("calender_icon.png");
+    -fx-background-color: null;
+    -fx-background-repeat: no-repeat;
+    -fx-background-position: center;
+}
